# synth-engine

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  READNE.md  THIRD_PARTY_NOTICES
.github/workflows/: build.yaml
crates/htsengine/: Cargo.toml  build.rs
crates/htsengine/src/: ffi.rs  lib.rs
crates/preprocess/: Cargo.toml
crates/preprocess/src/: all_csv.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: async_engine.rs  hts_engine.rs  lib.rs  main.rs  preprocess.rs  setting.rs
data/: template.config.toml
scripts/: duck.py  langlinks.py  page.py  postprocess.py  process.py
