[workspace]
resolver = "3"
members = ["./crates/*", "crates/preprocess", "crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bindgen = "0.72.1"
thiserror = "2.0.18"
hound = "3.5.1"
jpreprocess = { version = "0.13.2", features = ["naist-jdic"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "fs", "signal"] }
anyhow = "1.0.102"
futures = "0.3.32"
unicode-normalization = "0.1.25"
regex = "1.12.3"
axum = { version = "0.8.9", default-features = false, features = [
  "http1",
  "json",
  "matched-path",
  "original-uri",
  "query",
  "tokio",
  "tracing",
  "tower-log",
] }
serde = { version = "1.0.228", features = ["derive"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
toml = "1.1.2"
async-channel = "2.5.0"
num_cpus = "1.17.0"
lru = "0.18.0"
zstd = "0.13.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
