[package]
name = "synth-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
htsengine.path = "../htsengine"
jpreprocess.workspace = true
anyhow.workspace = true
futures.workspace = true
axum.workspace = true
serde.workspace = true
axum-extra.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
preprocess.path = "../preprocess"
toml.workspace = true
async-channel.workspace = true
num_cpus.workspace = true
hound.workspace = true
lru.workspace = true
